--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 :root {
   --primary-1: #00ddaf;
   --gray-1: #838e9e;
   --gray-h-2: #243752;
+  --gray-h-3: #e6e8ec;
 }
 * {
   box-sizing: border-box;
@@ -12,14 +14,11 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-  background-color: white;
-  color: black;
+  background: #f8f8fb;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   font-family: "Inter", sans-serif;
 }
 
@@ -28,14 +27,16 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
 .teacher-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
-
+  justify-content: flex-start;
+  width: 100%;
+}
+.hover:hover {
+  cursor: pointer;
+}
+.page-content {
+  width: 100%;
+  padding: 20px;
 }
