--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -4,6 +4,7 @@
   --gray-1: #838e9e;
   --gray-h-2: #243752;
   --gray-h-3: #e6e8ec;
+  --secondary-h-4: #12224f;
 }
 * {
   box-sizing: border-box;
