--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -5,6 +5,7 @@
   --gray-h-2: #243752;
   --gray-h-3: #e6e8ec;
   --secondary-h-4: #12224f;
+  --secondary-1: #092674;
 }
 * {
   box-sizing: border-box;
