finishin the ui

--- a/src/app/components/nav-bar/nav-bar.css
+++ b/src/app/components/nav-bar/nav-bar.css
@@ -11,6 +11,9 @@
   align-items: center;
   gap: 20px;
 }
+.login-nav .user-info-ar {
+  flex-direction: row-reverse;
+}
 .login-nav .user-info .text {
   display: flex;
   flex-direction: column;
