--- a/src/app/components/notifications-container/notifications-container.css
+++ b/src/app/components/notifications-container/notifications-container.css
@@ -10,6 +10,9 @@
   overflow-y: auto;
   padding: 20px;
 }
+.notifications-container-ar {
+direction: rtl;
+}
 .notification-container .notificatins-title {
   color: var(--gray-h-2);
   font-size: 24px;
