integrate auth and courses and user info

--- a/src/app/components/statistique-container/statistique-container.css
+++ b/src/app/components/statistique-container/statistique-container.css
@@ -6,7 +6,7 @@
   background: #fff;
   padding: 30px;
   gap: 20px;
-  width: 300px;
+  width: 40%;
 }
 .statistique-container .stat-desc {
   display: flex;
