--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap");
 :root {
   --primary-1: #00ddaf;
   --gray-1: #838e9e;
@@ -17,11 +17,11 @@ html,
 body {
   max-width: 100vw;
   background: #f8f8fb;
-  font-family: "Inter", sans-serif;
+  font-family: "Lexend", sans-serif;
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Lexend", sans-serif;
 }
 
 a {
