--- a/src/app/components/sailed-course/sailed-course.css
+++ b/src/app/components/sailed-course/sailed-course.css
@@ -4,15 +4,21 @@
   justify-content: center;
   border-radius: 16px;
   background: #fff;
-  padding: 0;
+  padding: 0 5px 0 0;
   gap: 20px;
   width: 48%;
+  height: 100%;
+}
+.stat-img-course {
+  border-radius: 16px 0 0 16px;
 }
 .statistique-container-course .stat-desc {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
+  gap: 10px;
+  width: 100%;
 }
 .statistique-container-course .stat-desc .stat-number-course {
   color: #2b2b2b;
@@ -63,4 +69,18 @@
   width: 100%;
   padding-left: 5px;
   flex-wrap: wrap;
+}
+.stars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+.total-cmnts {
+  color: #70747e;
+  font-size: 10.649px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.053px;
 }
